css/styles.css
/* GLOBAL STYLES */

:root {
  --cosmic-black: #000000;
  --star-white: #ffffff;
  --galactic-purple: #5500ff;
  --asteroid-gray: #363636;
}

* {
  font-family: 'Quicksand', sans-serif;
}

@keyframes fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

body {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  margin: 0;
  padding: 0;
  background-image: url('../images/space.jpg');
  background-size: cover;
  background-position: center;
  color: var(--star-white);
  font-family: 'Quicksand', sans-serif;
}

.main-content {
  flex-grow: 1;
}

/* HEADER */

header h1,
header p {
  color: var(--star-white);
}

header h1 {
  font-weight: bold;
  font-size: 5rem;
}

header p {
  font-style: italic;
  font-size: 2.5rem;
}

/* NAVBAR */

.dropdown-item,
.nav-link {
  display: block;
  width: 100%;
  padding: var(--star-white) var(--star-white);
  clear: both;
  font-size: large;
  font-weight: 400;
  background-color: transparent;
  color: var(--star-white);
  text-decoration: none;
  transition: color 0.3s, background-color 0.3s;
}

.dropdown-item:active {
  text-decoration: none;
}

.dropdown-menu {
  background-color: var(--cosmic-black);
  border: 2px solid var(--star-white);
  border-radius: 10px;
  min-width: 5rem;
  --bs-dropdown-link-hover-bg: (var(--cosmic-black));
}

.dropdown-menu.show {
  animation: fadeIn 0.3s alternate;
}

.navbar-nav .nav-link.active,
.navbar-nav .nav-link.show,
.navbar-nav .planets-link {
  color: var(--star-white) !important;
}

.navbar-nav .nav-item a:hover {
  color: var(--galactic-purple) !important;
}

.nav-link {
  padding: var(--star-white) var(--star-white);
  font-size: var(--bs-nav-link-font-size);
  font-weight: var(--bs-nav-link-font-weight);
}

.nav-item.dropdown.dropdown-mega .dropdown-menu {
  width: 90%;
  top: auto;
  left: 5%;
}

.navbar-toggler {
  border: none;
  padding: 0;
  outline: none;
  background-color: transparent;
}

.navbar-toggler:focus {
  box-shadow: none;
}

.navbar-toggler .hamburger-toggle {
  width: 50px;
  height: 50px;
  display: flex;
  align-items: center;
  justify-content: center;
  position: relative;
}

.navbar-toggler .hamburger-toggle .hamburger {
  width: 30px;
  height: 3px;
  background-color: var(--star-white);
  position: relative;
  transition: background-color 0.3s ease;
}

.navbar-toggler .hamburger-toggle .hamburger span {
  display: block;
  position: absolute;
  width: 100%;
  height: 100%;
  background-color: var(--star-white);
  transition: transform 0.3s ease;

  &:first-child {
    top: -10px;
  }

  &:last-child {
    bottom: -10px;
  }
}

.navbar-toggler.active .hamburger-toggle .hamburger {
  background-color: transparent;
}

.navbar-toggler.active .hamburger-toggle .hamburger span:first-child {
  transform: rotate(45deg) translateY(5px);
}

.navbar-toggler.active .hamburger-toggle .hamburger span:nth-child(2) {
  transform: scaleX(0);
}

.navbar-toggler.active .hamburger-toggle .hamburger span:last-child {
  transform: rotate(-45deg) translateY(-5px);
}

.icons {
  display: inline-flex;
  margin-left: auto;
}

.icons a {
  transition: all 0.2s ease-in-out;
  padding: 0.2rem 0.4rem;
  color: var(--star-white);
  text-decoration: none;
}

.icons a:hover {
  color: var(--star-white);
  text-shadow: 0 0 30px var(--star-white);
}

@media (max-width: 991.98px) {
  .navbar-toggler {
    order: -1;
  }
}

/* CAROUSEL */

#planetcarousel {
  width: 50%;
  margin: auto;
  margin-top: 20px;
  margin-bottom: 20px;
  border: 2px solid var(--star-white);
}

.carousel-inner img {
  object-fit: contain;
  width: 100%;
  height: 100%;
}

[data-bs-theme='dark'] .carousel .carousel-indicators [data-bs-target] {
  background-color: var(--star-white);
}

@media (max-width: 1000px) {
  #planetcarousel {
    width: 100%;
  }
}

/* CARDS */

.card {
  background-color: var(--cosmic-black);
  border: 2px solid var(--star-white);
  margin-top: 20px;
  margin-bottom: 20px;
}

.collapsing-card {
  width: 100%;
  margin: auto;
  margin-bottom: 20px;
}

.card-body {
  color: var(--star-white);
}

.card a:hover,
.collapsing-card a:hover {
  color: var(--galactic-purple);
}

.card-title {
  font-size: 1.5rem;
}

.card-text {
  font-size: 1rem;
}

@media (min-width: 1200px) {
  .card-text {
    font-size: 1.2rem;
  }
}

/* ABOUT */

.about-container {
  width: 100%;
  height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: var(--cosmic-black);
  border: 2px solid var(--star-white);
  margin-top: 20px;
  margin-bottom: 20px;
  padding: 20px;
}

/* FOOTER */

.footer {
  width: 100%;
  padding: 20px 0;
  color: var(--star-white);
  background-color: var(--asteroid-gray);
  border: 2px solid var(--star-white);
  text-align: center;
  margin-top: auto;
}

.footer.push {
  margin-top: 20px;
}

.footer a {
  text-decoration: none;
}

.footer img {
  width: 50px;
  height: 50px;
}

.socials img {
  transition: opacity 0.3s ease;
}

.socials img:hover {
  opacity: 0.5;
}

